--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -5,114 +5,114 @@
     <!--  
     MainView
     -->
-    <sys:String x:Key="LOCSucessStory">SuccessStory</sys:String>
-    <sys:String x:Key="LOCSucessStoryAchievements">Succès</sys:String>
+    <sys:String x:Key="LOCSuccessStory">SuccessStory</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAchievements">Succès</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryNotificationsSteamPrivate">Profil Steam n'est pas public</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsSteamDisabled">Steam est activé alors qu'il n'est pas disponible</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsSteamBadConfig">Mauvaise configuration Steam dans les paramètres de SteamLibrary</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsGogDisabled">GOG est activé alors qu'il n'est pas disponible</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsGogNoAuthenticate">Utilisateur GOG n'est pas connecté</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsOriginDisabled">Origin est activé alors qu'il n'est pas disponible</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsOriginNoAuthenticate">Utilisateur Origin n'est pas connecté</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsXboxDisabled">Xbox est activé alors qu'il n'est pas disponible</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsXboxNotAuthenticate">Utilisateur Xbox n'est pas connecté</sys:String>
-    <sys:String x:Key="LOCSucessStoryNotificationsRetroAchievementsBadConfig">Mauvaise configuration RetroAchievements dans les paramètres</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">Profil Steam n'est pas public</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam est activé alors qu'il n'est pas disponible</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Mauvaise configuration Steam dans les paramètres de SteamLibrary</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsGogDisabled">GOG est activé alors qu'il n'est pas disponible</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">Utilisateur GOG n'est pas connecté</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin est activé alors qu'il n'est pas disponible</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">Utilisateur Origin n'est pas connecté</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox est activé alors qu'il n'est pas disponible</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">Utilisateur Xbox n'est pas connecté</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">Mauvaise configuration RetroAchievements dans les paramètres</sys:String>
 
     <!--  
     SuccessStorySettingsView
     -->
 
-    <sys:String x:Key="LOCSucessStoryProgressBar">Traitement en cours...</sys:String>
+    <sys:String x:Key="LOCSuccessStoryProgressBar">Traitement en cours...</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryEnableSteam">Activier Steam</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableGog">Activier GOG</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableOrigin">Activier Origin</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableXbox">Activier Xbox</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableRetroAchievements">Activier RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableSteam">Activier Steam</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableGog">Activier GOG</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOrigin">Activier Origin</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableXbox">Activier Xbox</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Activier RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryEnableRetroAchievementsView">Activier la vue séparée pour RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Activier la vue séparée pour RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIncludeHiddenGames">Inclure les jeux cachés</sys:String>
-    <sys:String x:Key="LOCSucessStoryAllUnlockedByMonth">Graphique avec tous les achievements par mois</sys:String>
-    <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphique avec tous les achievements par jour</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Inclure les jeux cachés</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Graphique avec tous les achievements par mois</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Graphique avec tous les achievements par jour</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryDefaultSorting">Trie par défaut</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDefaultSorting">Trie par défaut</sys:String>
     <sys:String x:Key="LOCMenuSortAscending">Ascendant</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryDatabase">Manipulation base de données</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDatabase">Manipulation base de données</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Récupérer les données</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Rafraichir les données</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Rafraîchir</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetMissing">Manquants</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetDataRecent">Les récents manquants</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Tous les récents</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshAllData">Tous les succès</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetAllData">Tous les manquants</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetDataInstalled">Manquants des jeux installés</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetMissing">Manquants</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataRecent">Les récents manquants</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Tous les récents</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllData">Tous les succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllData">Tous les manquants</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Manquants des jeux installés</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Succès pour les jeux installés</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIntegration">Intégration dans l'interface</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegration">Intégration dans l'interface</sys:String>
     <sys:String x:Key="LOCCommonIntegrationInDescription">Dans la description du jeu</sys:String>
     <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">Avec un bouton à bascule</sys:String>
     <sys:String x:Key="LOCCommonIntegrationShowTitle">Afficher le titre</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowGraphic">Afficher le graphique</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievements">Afficher la liste des succès</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Au dessus de la description</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationToggleDetails">Bouton à bascule avec détails</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Afficher le graphique</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Afficher la liste des succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationTopGameDetails">Au dessus de la description</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationToggleDetails">Bouton à bascule avec détails</sys:String>
     <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Intgération dans les thèmes personnalisés (si intégré)</sys:String>
     <sys:String x:Key="LOCCommonIntegrationButton">Ajouter un bouton</sys:String>
     <sys:String x:Key="LOCCommonIntegrationButtonDetails">Ajouter un bouton avec détails</sys:String>
     <sys:String x:Key="LOCCommonIntegrationButtonHeader">Ajouter un bouton dans la fenêtre</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Afficher une barre de progression</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Afficher list compact déverrouillé</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Afficher list compact verrouillé</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Afficher une barre de progression</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Afficher list compact déverrouillé</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Afficher list compact verrouillé</sys:String>
 
     <sys:String x:Key="LOCCommonIntegrationSelectElements">Sélection des élements</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Options du graphique</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptionsCountAbscissa">Nombre de données en abscisse</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Afficher les noms sur l'abscisse</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabelsOrdinates">Afficher les noms sur l'ordonnée</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarOptions">Options de la barre de progression</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowIndicator">Afficher l'indicateur</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Afficher les pourcentage</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationListOptions">Options de la liste des succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Options du graphique</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Nombre de données en abscisse</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabels">Afficher les noms sur l'abscisse</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabelsOrdinates">Afficher les noms sur l'ordonnée</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarOptions">Options de la barre de progression</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowIndicator">Afficher l'indicateur</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Afficher les pourcentage</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">Options de la liste des succès</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">La base de données des succès a bien été réinitialisées.</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryGetMissingToolTip" xml:space="preserve">Récupérer les succès non téléchargés du store.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Récupérer les succès non téléchargés du store.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès du store.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryGetDataRecentToolTip" xml:space="preserve">Récupérer les succès non téléchargés sur un mois glissant.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetDataInstalledToolTip" xml:space="preserve">Récupérer les succès non téléchargés pour les jeux installés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
-    <sys:String x:Key="LOCSucessStoryGetAllDataToolTip" xml:space="preserve">Récupérer les succès non téléchargés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Récupérer les succès non téléchargés sur un mois glissant.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Récupérer les succès non téléchargés pour les jeux installés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Récupérer les succès non téléchargés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès sur un mois glissant.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès sur un mois glissant.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour les jeux installés.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshAllDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour tous les jeux.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour tous les jeux.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
 
     <!-- 
     SuccessStoryView 
     -->
 
     <!-- UI -->
-    <sys:String x:Key="LOCSucessStoryFilterSource">Filtrer par source</sys:String>
+    <sys:String x:Key="LOCSuccessStoryFilterSource">Filtrer par source</sys:String>
     <sys:String x:Key="LOCSearchLabel">Recherche</sys:String>
-    <sys:String x:Key="LOCSucessStoryGlobalProgression">Progression globale</sys:String>
-    <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [jeux lancés]</sys:String>
-    <sys:String x:Key="LOCSucessStoryGameInformation">Information</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGlobalProgression">Progression globale</sys:String>
+    <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Progression [jeux lancés]</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGameInformation">Information</sys:String>
 
     <!-- ListViewGames -->
     <sys:String x:Key="LOCGameIconTitle">Icône</sys:String>
     <sys:String x:Key="LOCGameNameTitle">Name</sys:String>
     <sys:String x:Key="LOCLastPlayed">Dernière session</sys:String>
     <sys:String x:Key="LOCSourceLabel">Source</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesProgression">Progression</sys:String>
+    <sys:String x:Key="LOCSuccessStorylvGamesProgression">Progression</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Tous les succès obtenus par mois</sys:String>
-    <sys:String x:Key="LOCSucessStoryGraphicTitleALLDay">Tous les succès obtenus par jour</sys:String>
-    <sys:String x:Key="LOCSucessStoryGraphicTitle">Succès obtenus par mois</sys:String>
-    <sys:String x:Key="LOCSucessStoryGraphicTitleSources">Succès obtenus par sources</sys:String>
-    <sys:String x:Key="LOCSucessStoryGraphicTitleDay">Succès obtenus par jour</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Tous les succès obtenus par mois</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleALLDay">Tous les succès obtenus par jour</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitle">Succès obtenus par mois</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Succès obtenus par sources</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Succès obtenus par jour</sys:String>
     
 </ResourceDictionary>
